# launch_remote

./: README.md
launch_remote_interfaces/: CMakeLists.txt  LICENSE  package.xml
launch_remote_interfaces/msg/: LaunchArgument.msg  LaunchFile.msg  LaunchProcess.msg  LaunchProcesses.msg
launch_remote_interfaces/srv/: Launch.srv  Stop.srv
launch_remote_manager/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
launch_remote_manager/launch/: test.launch.py
launch_remote_manager/launch_remote_manager/: __init__.py  copy_install.py  copy_install_space.py  launch_client.py  launch_manager.py  launch_remote.py  launch_server.py
launch_remote_manager/src/: launch_manager.cpp
launch_remote_ssh/: CMakeLists.txt  README.md  package.xml  setup.cfg
launch_remote_ssh/cmake/: generate_flexible_launch_xmls.cmake  generate_flexible_launch_xmls_run_script.cmake
launch_remote_ssh/launch_remote_ssh/: __init__.py  copy_install.py  copy_install_space.py  execute_process_remote.py  execute_process_remote_ssh.py  find_package_remote.py  flexible_frontend_defaults.py  flexible_frontend_launch_defaults.py  generate_flexible_launch_xml.py  install_remote_ssh.py  launch_remote.py  launch_remote_ssh.py  node_remote.py  node_remote_ssh.py  replace_text_substitution.py
launch_remote_ssh/scripts/: copy_install_space.py  generate_flexible_launch_xmls.py  stop_all_remote_processes
launch_remote_ssh/src/: copy_install_space.py  remote_process_handler.cpp
launch_remote_ssh/test/: param_node.py  param_tester.py  service_node.py  test_entry_point.launch.py
launch_remote_ssh/test/flexible_launch_xmls/: test_generate_flexible3.core.launch  test_generate_flexible4.launch.core.xml
launch_remote_ssh/test/flexible_launch_xmls/to_generate/: test_generate_flexible1.core.launch  test_generate_flexible1.launch.core  test_generate_flexible2.launch.core.xml
launch_remote_ssh/test/launch/: test_entry_point.launch.py  test_launch_entry_point.launch.py  test_launch_entry_point.launch.xml  test_launch_entry_point.launch.yaml  test_launch_remotely_launched.launch.py  test_launch_remotely_launched.launch.xml  test_launch_remotely_launched.launch.yaml  test_launch_tester_node.cpp  test_remotely_launched.launch.py  tester_node.cpp
launch_remote_ssh/test/node/: test_node_entry_point.launch.py  test_node_entry_point.launch.xml  test_node_entry_point.launch.yaml  test_node_params1.yaml  test_node_params2.yaml  test_node_tester_node.cpp
