<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_remote_ssh</name>
  <version>0.0.0</version>
  <description>Tools for remotely launching launch files/nodes via an SSH connection.</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <license>BSD-3-Clause</license>
  <author email="ngmorales97@gmail.com">Nick Morales</author>
  <author email="elwin@northwestern.edu">Matthew Elwin</author>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>catch_ros2</depend>

  <exec_depend>rsync</exec_depend>
  <exec_depend>screen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>std_srvs</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
